Bug 418419 - Lokalize crash every time when trying to drop alternative translation in the Alternative translations pane
Summary: Lokalize crash every time when trying to drop alternative translation in the ...
Status: RESOLVED FIXED
Alias: None
Product: lokalize
Classification: Applications
Component: general (other bugs)
Version First Reported In: 19.04.0
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Simon Depiets
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2020-03-03 00:34 UTC by boput
Modified: 2023-02-07 23:18 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Kubuntu crash repoert (8.77 KB, text/plain)
2020-03-03 00:34 UTC, boput
Details
Grayed-target-language-2020-03-23 100715.png (65.78 KB, image/png)
2020-03-23 17:20 UTC, boput
Details
Alternative-Translations-2020-03-23 101636.png (32.94 KB, image/png)
2020-03-23 17:20 UTC, boput
Details
attachment-24701-0.html (1.84 KB, text/html)
2020-03-23 21:11 UTC, boput
Details

Note You need to log in before you can comment on or make changes to this bug.
Description boput 2020-03-03 00:34:13 UTC
Created attachment 126556 [details]
Kubuntu crash repoert

SUMMARY


STEPS TO REPRODUCE
1. Drag (with mouse) alternative translation file (eg. coreutils-8-31.90.cs.po onto Lokalize "Alternative Translations" pane.
2. Even when hovering with the mouse over this pane Lokalize crashes every time. Meaning, just Lokalize crashes every time before dropping the file (cannot drop as Lokalize alreday crashed.
3. Above repeats every time

OBSERVED RESULT
Lokalize crashes every time when trying do drop alternative translations onto its pane

EXPECTED RESULT
Get alternative translations function work properly

SOFTWARE/OS VERSIONS
KDE Plasma Version: 
KDE Frameworks Version: 5.62.0
Qt Version:  5.12.4

ADDITIONAL INFORMATION
Application: Lokalize (lokalize), signal: Segmentation fault
Using host libthread_db library "/lib/x86_64-linux-gnu/libthread_db.so.1".
[Inferior 1 (process 3886) detached]
Comment 1 Simon Depiets 2020-03-23 12:28:03 UTC
Can you send me the files you use, I've never used this feature with actual files.
Comment 2 boput 2020-03-23 17:20:49 UTC
Created attachment 126973 [details]
Grayed-target-language-2020-03-23 100715.png

Hello Simon,

I will reply later in separate mail (from my Kubuntu PC) and send you files you requested.

Interestingly, Lokalize  version 20.07.70 on Windows from binary-factory does not have this problem. It functions good. There are some problems, but Alternative Translations work.
Lokalize v.20.07.70 from binary-factory, Windows 10, US version with en_US default, added hr (Croatian) keyboard  for writing in croatian.
1. Cannot select target language: see picture, Target language pane is grayed. 
2. Spelling does not work: Lokalize “thinks” that target and source language are en_CA. Cannot change Target language to Croatian, nor Source language to en_US.
3. Most importantly, “Alternative Translations” works!
See pictuture.

Best,

Bozidar
More from Kubuntu PC on file you requested


Sent from Mail for Windows 10

From: Simon Depiets
Sent: Monday, March 23, 2020 05:28
To: bozidarp@yahoo.com
Subject: [lokalize] [Bug 418419] Lokalize crash every time when trying todrop alternative translation in the Alternative translations pane

https://bugs.kde.org/show_bug.cgi?id=418419

--- Comment #1 from Simon Depiets <sdepiets@gmail.com> ---
Can you send me the files you use, I've never used this feature with actual
files.
Comment 3 boput 2020-03-23 17:20:49 UTC
Created attachment 126974 [details]
Alternative-Translations-2020-03-23 101636.png
Comment 4 boput 2020-03-23 21:11:03 UTC
Created attachment 126976 [details]
attachment-24701-0.html

 Kubuntu 19.10
Lokalize v. 19.04.3

Videos showing using Lokalize to translate (shown) nano-4.9-pre.hr.po from en_US to hr_HR, and trying to us file nano-4.9-pre1.fr.po as alternative translations to compare with.

1`. Video IMG_0073.MOV showing dragging with mouse nano-4.9-pre1.fr.po over big top right panes (original text (msgid) in upper, and translated text (msgstr) in lower pane). Every time mouser pointer dragging file cross or hover over these two panes, Lokalize crashes.
2. Video IMG_0074.MOV shows that if file is dragged directly (not crossing or hover above two big top right panes) into 'Alternate Translation' pane, Lokalize does not crash.     On Monday, March 23, 2020, 05:28:05 AM PDT, Simon Depiets <bugzilla_noreply@kde.org> wrote:  
 
 https://bugs.kde.org/show_bug.cgi?id=418419

--- Comment #1 from Simon Depiets <sdepiets@gmail.com> ---
Can you send me the files you use, I've never used this feature with actual
files.
Comment 5 Bug Janitor Service 2023-02-07 17:25:54 UTC
A possibly relevant merge request was started @ https://invent.kde.org/sdk/lokalize/-/merge_requests/31
Comment 6 wojnilowicz 2023-02-07 22:18:00 UTC
Git commit 155894dfa27dd7cafae2ee4637ac41838224300f by Łukasz Wojniłowicz.
Committed on 07/02/2023 at 17:23.
Pushed by aacid into branch 'master'.

Don't try to access null dragSource

M  +2    -1    src/xlifftextedit.cpp

https://invent.kde.org/sdk/lokalize/commit/155894dfa27dd7cafae2ee4637ac41838224300f
Comment 7 Albert Astals Cid 2023-02-07 23:18:16 UTC
Git commit 421cf66c8a3ce615e356212fd6416867cf31a2eb by Albert Astals Cid, on behalf of Łukasz Wojniłowicz.
Committed on 07/02/2023 at 23:17.
Pushed by aacid into branch 'release/22.12'.

Don't try to access null dragSource
(cherry picked from commit 155894dfa27dd7cafae2ee4637ac41838224300f)

M  +2    -1    src/xlifftextedit.cpp

https://invent.kde.org/sdk/lokalize/commit/421cf66c8a3ce615e356212fd6416867cf31a2eb