Don't try to access null dragSource

BUG: 418419